--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,7 @@
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="{% url 'home' %}"> Pratz Blog</a>
+    <a class="navbar-brand" href="{% url 'home' %}">Pratzblog</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse"
     data-target="#navbarSupportedContent"
     aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -35,6 +35,11 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       {% if user.is_authenticated %}
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item">
+          <a href="{% url 'article_new' %}">+ New Post</a>
+          </li>
+        </ul>
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
             <a class="nav-link dropdown-toggle" href="#"
