--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
 {% load static %}
 <html>
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="utf-8">
   <title>{% block title %}Blog App{% endblock title %}</title>
